flex-grow, flex-shrink

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 .child {
-    width: 200px;
+    width: 300px;
     height: 200px;
     background: peru;
     color: white;
@@ -17,3 +17,8 @@
     justify-content: center;
     align-items: center;
 }
+
+.child:nth-child(2) {
+    background: #000;
+    flex-grow: 1;
+  }
