--- a/styles.css
+++ b/styles.css
@@ -7,9 +7,15 @@
     flex-wrap: wrap;
 }
 
+.father {
+    display: grid;
+    grid-template-columns: 250px 250px 250px;
+    grid-template-rows: 100px 50px 300px;
+    column-gap: 5px;
+    row-gap: 10px;
+}
+
 .child {
-    width: 300px;
-    height: 200px;
     background: peru;
     color: white;
     font-size: 50px;
@@ -17,8 +23,3 @@
     justify-content: center;
     align-items: center;
 }
-
-.child:nth-child(2) {
-    background: #000;
-    flex-grow: 1;
-  }
