--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,26 @@
 .grid {
     display: grid;
-    gap: 10px;
-    grid-template-columns: repeat(4, 100px);
-    grid-template-rows: repeat(4, 100px);
-}
-
-.header {
+    gap: 5px;
+    height: 50vh;
+    grid-template:
+      "header header header header" 1fr
+      "content content content nav" 2fr
+      "footer footer footer footer" 1fr / 1fr 1fr 1fr 1fr;
+  }
+  
+  .header {
     background-color: #2ecc71;
-    grid-column: span 4;
-}
-
-.content {
+    grid-area: header;
+  }
+  .content {
     background-color: #3498db;
-    grid-column: 1 / -2;
-    grid-row: span 2;
-}
-
-.nav {
+    grid-area: content;
+  }
+  .nav {
     background-color: #8e44ad;
-    grid-row: span 2;
-}
-
-.footer {
+    grid-area: nav;
+  }
+  .footer {
     background-color: #f39c12;
-    grid-column: span 4;
-}
+    grid-area: footer;
+  }
