--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,8 @@
   color: white;
   display: grid;
   gap: 5px;
-  grid-template-columns: repeat(4, 100px);
-  grid-template-rows: repeat(4, 100px);
-  grid-auto-flow: column;
-  grid-auto-columns: 100px;
+  grid-auto-rows: 100px;
+  margin-bottom: 30px;
 }
 
 .item:nth-child(odd) {
@@ -14,4 +12,12 @@
 
 .item:nth-child(even) {
   background-color: #3498db;
+}
+
+.grid:first-child {
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+}
+
+.grid:last-child {
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
 }
